<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">


    <Button
        android:id="@+id/search"
        android:layout_width="148dp"
        android:layout_height="54dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="204dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/mainMenu"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterCode"
        android:textAlignment="center"

        android:translationY="223dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
/>

    <Button
        android:id="@+id/scan"
        android:layout_width="148dp"
        android:layout_height="54dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="284dp"
        android:text="@string/scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/toStory"
        android:layout_width="148dp"
        android:layout_height="54dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="364dp"
        android:text="@string/Story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>